--- a/CV_CDUPONT.tex
+++ b/CV_CDUPONT.tex
@@ -12,7 +12,7 @@
 \address{via Villa Belfonte, 7}{38123 Trento}
 \mobile{+39 380 6312093}
 \email{corentin.dupont@gmail.com}
-%\photo[64pt]{picture}
+\photo[64pt]{img/CDUPONT2}
 %\nopagenumbers{}
 
 \begin{document}
@@ -67,7 +67,7 @@ MS-Project, project management tools, SQL.
 \cvlanguage{Spanish, Czech}{Beginner}{}
 
 \section{Computer skills}
-\cvcomputer{Operating Systems}{Linux, Windows, Solaris, HP-UX}{Languages}{Haskell, Java, C++, Ada}
+\cvcomputer{Operating Systems}{Linux, Windows, Solaris, HP-UX}{Languages}{Haskell, Java, C++, Ada, R}
 \cvcomputer{Programming techniques}{Constraint Programming, Big Data: Hadoop}{Development and Specification}{Eclipse, Linux tools, Qt, Doors}
 \cvcomputer{Project Management}{CMMi 3 level, MS Project, OWB}{category 6}{XXX, YYY, ZZZ}
 
@@ -84,6 +84,8 @@ MS-Project, project management tools, SQL.
 \bibentry{dupont-unitn14}
 \bibliographystyle{plain}
 \bibliography{central-bibliography}
+
+Reviewer for: ...
 
 \section{Hobbies}
 \cvline{Paragliding}{\small Flying since 20 years, licenced for taking passengers}
