--- a/CV_CDUPONT.tex
+++ b/CV_CDUPONT.tex
@@ -83,7 +83,7 @@ MS-Project, project management tools, SQL.
 \bibentry{dupont-E2DC14}
 \bibentry{dupont-unitn14}
 \bibliographystyle{plain}
-\bibliography{central-bibliography}
+\bibliography{bibliography/central-bibliography}
 
 Reviewer for: ...
 
