--- a/main.tex
+++ b/main.tex
@@ -3,14 +3,15 @@
 \usepackage[utf8]{inputenc}
 \usepackage{natbib}
 \usepackage{bibentry}
+\usepackage{footmisc}
 \usepackage[scale=0.8]{geometry}
 %\setlength{\hintscolumnwidth}{3cm} % if you want to change the width of the column with the dates
 \AtBeginDocument{\recomputelengths} 
 
 \firstname{Corentin}
 \familyname{Dupont}
-\title{Senior Researcher}
-\address{via Villa Belfonte, 7}{38123 Trento}
+\title{Senior Researcher, Technical leader, Cloud Computing \& IoT expert}
+\address{via Marcantonio Flaminio, 1}{37133 Verona}
 \mobile{+39 380 6312093}
 \email{corentin.dupont@gmail.com}
 \photo[64pt]{img/CDUPONT2}
@@ -20,28 +21,29 @@
 \maketitle
 
 \section{Education}
-\cventry{On-Going (3rd year)}{PhD}{University of Trento}{Trento}{}{Thesis on energy management in data centres}
+\cventry{2016}{PhD}{University of Trento}{Trento}{}{Thesis "Energy adaptive infrastructure for sustainable cloud data centres"}
 \cventry{2003}{MsD}{Institut Supérieur de l'Electronique et du Numérique}{Toulon}{}{Specialisation on Real Time computing}
 
 \section{Experience}
 \subsection{Research experience}
 
-\cventry{2010--present}{Work Package manager \& research team leader}{Create-Net}{Trento}{}{Leader of Work Package 4 (FIT4Green) and 5 (DC4Cities). Research and design the algorithms and policies for energy-aware optimization of data centre operations.
+\cventry{2016--present}{Project technical director}{FBK - Create-Net}{Trento}{}{Technical director of Waziup and WaziHub IoT projects.
 \begin{itemize}
-  \item	leader of a team of 4 persons,
-  \item	WP management,
+  \item	Team management,
+  \item	Cloud and IoT research,
+  \item Implementation of Cloud platform.
+\end{itemize}
+}
+\cventry{2010--2015}{Work Package responsible \& researcher}{Create-Net}{Trento}{}{Work Package leader for projects FIT4Green DC4Cities. Research and design the algorithms and policies for energy-aware optimization of data centre operations.
+\begin{itemize}
+  \item	Leader of a team of 4 persons,
   \item Algorithmic research, specification and design,
   \item Implementation of FIT4Green \& DC4Cities prototypes.
 \end{itemize}
 }
 \cventry{2010--present}{Research funding}{Create-Net}{Trento}{}{
-\textcolor{blue}{Grants won:} DC4Cities EU project (WP leader) \\
-\textcolor{blue}{Proposal writing:} 
-\begin{itemize}
-\item Light4Cloud EU project (Proposal coordinator, under review)
-\item DC4Cities EU project (WP leader, won)
-\item 5 other EU proposals in IoT and Cloud computing (support/WP leader)
-\end{itemize}
+\textcolor{blue}{Grants won:} DC4Cities and WaziHub EU project (WP leader, technical director) \\
+Participated in 8 project proposals (Coordinator or WP leader) 
 }
 \cventry{2011--2012}{Researcher}{Create-Net}{Trento}{}{Research in the area of Internet of Things. Leader of the iCore platform.
 \begin{itemize}
@@ -51,12 +53,13 @@
 \end{itemize}
 }
 
+
 \bigskip
 
 \subsection{Industrial experience}
 \cventry{2003--2008}{Project Leader}{DCNS/EADS}{Aix en Provence, France}{}{Projects for the Norway frigates SKJOLD and the Franco-Italian frigates HORIZON
 \begin{itemize}
-  \item Technical leader and project leader (CMMi 3), with a team of 4 persons for the realization of the Real Time Simulator (DCNS)
+  \item Technical leader and project leader (CMMi 3), team of 4 persons
   \item Specification, Conception and development of 5 simulators (calculator in Ada and GUI in C++/Qt) : Fire Control Tracker, Decoy Launcher System, Torpedo Launch System, Air Transceiver, Principal Anti-Air Missile System.
   \item Evolution of NeVis, a 3D demonstrator for urban warfare (EADS).
 \end{itemize}
@@ -76,12 +79,12 @@ MS-Project, project management tools, SQL.
 \cvlanguage{English}{Fluent}{647/700 TOEFL, 980/990 TOEIC, work \& everyday language}
 \cvlanguage{Italian}{Fluent}{living in Italy since 2010}
 \cvlanguage{French}{Native}{}
-\cvlanguage{Spanish, Czech}{Beginner}{}
 
 \section{Computer skills}
-\cvcomputer{OSes:}{Linux, Windows, Solaris, HP-UX}{Languages:}{Haskell, Java, C++, Ada, R}
-\cvcomputer{Prog. techniques:}{Constraint Programming, Big Data (Hadoop)}{Development:}{Eclipse, Linux tools, Qt, Doors}
-\cvcomputer{Project Managmnt:}{CMMi 3 level, MS Project, OWB}{}{}
+\cvcomputer{\emph{Languages:}}{Haskell, Javascript, NodeJS, Java, C/C++, Ada, R, HTML5, CSS3, Python}
+           {Cloud computing:}{OpenStack, Docker, Kubernetes, Cloud Foundry, Amazon AWS...} 
+\cvcomputer{IoT \& big data:}{Hadoop, Elastic Search, Constraint programming, databases...}
+           {Architecture:}{REST APIs, Micro services, UML...}
 
 \renewcommand{\listitemsymbol}{-} % change the symbol for lists
 
@@ -89,9 +92,9 @@ MS-Project, project management tools, SQL.
 
 \bibliographystyle{plain}
 \nobibliography{bibliography/central-bibliography}
-
+Active from 2012.
 \begin{itemize}
-\item \bibentry{klingert-smart14}
+\item \bibentry{klingert-smart15}
 \item \bibentry{dupont-adhoc14}
 \item \bibentry{dupont-eenergy12}
 \item \bibentry{quan2012}
@@ -100,13 +103,28 @@ MS-Project, project management tools, SQL.
 \item \bibentry{dupont-E2DC13}
 \item \bibentry{dupont-E2DC14}
 \item \bibentry{dupont-unitn14}
+\item \bibentry{dupont-ict4s15}
+\item \bibentry{dupont-ucc15}
+\item \bibentry{dupont-SGSC15}
+\item \bibentry{rahim-river2016}
+\item \bibentry{rahim-IERC2016}
+\item \bibentry{dupont-iotbigdata16}
+\item \bibentry{pizzolli-cloudcom2016}
+\item \bibentry{dupont-unitn16}
+\item \bibentry{rahim-river2016}
+\item \bibentry{rahim-IERC2016}
+\item \bibentry{dupont-iotbigdata16}
+\item \bibentry{dupont-geconf17}
+\item \bibentry{dupont-giots17}
+\item \bibentry{dupont-istafrica17}
 \end{itemize}
 
 Reviewer for Journal of Grid Computing, E-Energy, FGCS and others.
+Chair for the EAI IoT 360 Summer School.
 
 \section{Hobbies}
-\cvline{Paragliding}{\small Flying since 20 years, licenced for taking passengers}
-\cvline{Hacking}{\small Author of a unique game called Nomyx: www.nomyx.net}
+\cvline{Paragliding}{\small Flying since 20 years, licensed for taking passengers}
+\cvline{Open Source}{\small More than 3000 contributions on Github. Author of a unique game: www.nomyx.net. }
 
 \end{document}
 
