--- a/main.tex
+++ b/main.tex
@@ -117,6 +117,7 @@ Active from 2012.
 \item \bibentry{dupont-geconf17}
 \item \bibentry{dupont-giots17}
 \item \bibentry{dupont-istafrica17}
+\item \bibentry{dupont-wcmc18}
 \end{itemize}
 
 Reviewer for Journal of Grid Computing, E-Energy, FGCS and others.
