--- a/main.tex
+++ b/main.tex
@@ -7,10 +7,9 @@
 \usepackage[scale=0.8]{geometry}
 %\setlength{\hintscolumnwidth}{3cm} % if you want to change the width of the column with the dates
 \AtBeginDocument{\recomputelengths} 
-
 \firstname{Corentin}
 \familyname{Dupont}
-\title{Senior Researcher, Technical leader, Cloud Computing \& IoT expert}
+\title{Technical director \& Researcher, IoT \& Cloud Computing}
 \address{via Marcantonio Flaminio, 1}{37133 Verona}
 \mobile{+39 380 6312093}
 \email{corentin.dupont@gmail.com}
@@ -21,13 +20,20 @@
 \maketitle
 
 \section{Education}
-\cventry{2016}{PhD}{University of Trento}{Trento}{}{Thesis "Energy adaptive infrastructure for sustainable cloud data centres"}
-\cventry{2003}{MsD}{Institut Supérieur de l'Electronique et du Numérique}{Toulon}{}{Specialisation on Real Time computing}
+\cventry{2016}{PhD}{University of Trento}{Trento}{Italy}{Thesis "Energy adaptive infrastructure for sustainable cloud data centres"}
+\cventry{2003}{MsD}{Institut Supérieur de l'Electronique et du Numérique}{Toulon}{France}{Specialisation on Real Time computing}
 
 \section{Experience}
 \subsection{Research experience}
 
-\cventry{2016--present}{Project technical director}{FBK - Create-Net}{Trento}{}{Technical director of Waziup and WaziHub IoT projects.
+\cventry{2018--present}{Technical director}{Innotec 21 \& Waziup e.V.}{Dresden, Germany}{}{Technical director of WaziHub IoT project.
+\begin{itemize}
+  \item	Team management,
+  \item Implementation of Cloud \& IoT platform: \underline{\link{http://www.waziup.io}}.
+  \item Funding \& grant proposal writing
+\end{itemize}
+}
+\cventry{2016--2018}{Project technical director}{Fondazione Bruno Kessler - Create-Net}{Trento, Italy}{}{Technical director of Waziup and WaziHub IoT projects.
 \begin{itemize}
   \item	Team management,
   \item	Cloud and IoT research,
@@ -43,7 +49,7 @@
 }
 \cventry{2010--present}{Research funding}{Create-Net}{Trento}{}{
 \textcolor{blue}{Grants won:} DC4Cities and WaziHub EU project (WP leader, technical director) \\
-Participated in 8 project proposals (Coordinator or WP leader) 
+Participated in many project proposals as Coordinator or WP leader.
 }
 \cventry{2011--2012}{Researcher}{Create-Net}{Trento}{}{Research in the area of Internet of Things. Leader of the iCore platform.
 \begin{itemize}
@@ -81,10 +87,10 @@ MS-Project, project management tools, SQL.
 \cvlanguage{French}{Native}{}
 
 \section{Computer skills}
-\cvcomputer{\emph{Languages:}}{Haskell, Javascript, NodeJS, Java, C/C++, Ada, R, HTML5, CSS3, Python}
-           {Cloud computing:}{OpenStack, Docker, Kubernetes, Cloud Foundry, Amazon AWS...} 
-\cvcomputer{IoT \& big data:}{Hadoop, Elastic Search, Constraint programming, databases...}
-           {Architecture:}{REST APIs, Micro services, UML...}
+\cvcomputer{\emph{Languages:}}{\textcolor{blue}{Haskell}, Javascript, NodeJS, ReactJS, Java, C/C++, R, HTML5, CSS3, Python}
+           {\emph{Cloud computing:}}{OpenStack, Docker, Kubernetes, Cloud Foundry, Amazon AWS...} 
+\cvcomputer{\emph{IoT \& big data:}}{Arduino, Raspberry PI, Hadoop, Elastic Search, Constraint programming, databases...}
+           {\emph{Architecture:}}{REST APIs, Micro services, UML...}
 
 \renewcommand{\listitemsymbol}{-} % change the symbol for lists
 
